apps/immich-postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich-postgres
  annotations:
    argocd.argoproj.io/tracking-id: "immich:/Namespace:immich-postgres/immich-postgres"
